Made additional UI adjustments and changes to allow for more flexibility depending on the name and title of the game in the fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="queue">Queued Games</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="gameFragmentInfo">Select from the following options below:</string>
 
     <string name="about">About</string>
     <string name="about_title">About ElForge</string>
