Fixed up Login spash page with more detail and added an Implicit Intent to the About page that will allow the user to be able to visit the github repository.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="gameFragmentInfo">Select from the following options below:</string>
 
     <string name="about">About</string>
-    <string name="about_title">About ElForge</string>
+    <string name="about_title">About El Forge</string>
     <string name="about_info">An app that will allow users to invite their friends to play games using an invite system.  Users will send out invites for a game at a specific time and date, and will get confirmations that they will attend.</string>
+    <string name="welcome">Welcome to El Forge</string>
+    <string name="github">Learn more on my GitHub</string>
 </resources>
